# Face_Verification

./: CMakeLists.txt  README.md  main.cpp
model/: README.md
result/: README.md
src/: FaceProcessing.cpp  FaceProcessing.h  JointBayesian.cpp  JointBayesian.cpp~  JointBayesian.h  extract_features.cpp  extract_features.cpp~  extract_features.h  jb_function.py
xml/: README.md
